# Jeff-s-Adventure

./: .editorconfig  .gitignore  Animation.cpp  Animation.h  CMakeLists.txt  Character.h  Eraser.cpp  Eraser.h  Game.cpp  Game.h  Jeff.cpp  Jeff.h  Menu.cpp  Menu.h  Platform.cpp  Platform.h  README.md  SFML.vcxproj  SFML.vcxproj.filters  Snippy.cpp  Snippy.h  Source.cpp
include/: README.md
jeff_shooting/: Menu.cpp
lib/: README.md
